Add endpoint for tracing
